tests/parser/syntax-errors/token-not-found/expected_rparen_paren_expr.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

def foo():
    pass

([3,4]

# CHECK:      SyntaxError (line 6, column 7): token of kind TokenKind.RROUNDBRACKET not found.
# CHECK-NEXT: >>>([3,4]
# CHECK-NEXT: >>>------^
